--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,12 @@
 body{
- background-image: url("w.png");
- background-size: 100%
+ background-image: url("diamond_upholstery.png");
+ background-size: 100%;
+ overflow: scroll;
 }
 
-/*
-img.bg {
-  /* Set rules to fill background */
-  min-height: 100%;
-  min-width: 1024px;
-	
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: 100%;
-	
-  /* Set up positioning */
-  position: fixed;
-  top: 0;
-  left: 0;
+.bcg{
+	background-color: #ffffe5;
+ 	margin: 0 auto;
 }
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
@@ -25,25 +15,33 @@ img.bg {
     margin-left: -512px;   /* 50% */
   }
 }
-*/
+
 
 .container{
-	position: fixed;
+
     left: 0px;
     top: 0px;
     z-index: 100;
     min-width: 100%;
+
+}
+
+#main{
+	margin: 0 auto;
+}
+
+#button{
+	margin-top: 200px;
 }
 
 
 h1 { 
 	color: #808080; 
 	font-family: "Great Vibes", cursive; 
-	font-size: 75px; 
-	line-height: 160px; 
+	font-size: 55px; 
+	margin-top: 25px;
 	font-weight: bold; 
-	margin-bottom: 0px; 
-	margin-top: 10px; 
+	margin: 0 auto;
 	text-align: center; 
 	text-shadow: 0 1px 1px #fff; 
 }
@@ -60,3 +58,19 @@ h2 {
 	text-shadow: 0 1px 1px #fff; 
 }
 
+.hide{
+	visibility: none;
+}
+#footer{
+	position: relative;
+}
+
+#add{
+	margin-top: 10px;
+	}
+#edit{
+	margin-top: 10px;
+}
+#save{
+	margin-top: 10px;
+}
