change heading color

--- a/css/tableStyle.css
+++ b/css/tableStyle.css
@@ -30,7 +30,7 @@
 .rowt.header-summary {
   font-weight: 900;
   color: #ffffff;
-  background: #c1c1a4;
+  background: #7a7a52;
 }
 
 @media screen and (max-width: 580px) {
