--- a/css/searchStyle.css
+++ b/css/searchStyle.css
@@ -1,73 +1,43 @@
-.searchbox{
- text-align: center; 
- background-color:#fffbf8;
- padding:13px;
- width:335px;
- margin: 0 auto;
- margin-top: 25px;
- -webkit-box-sizing:border-box;
- -moz-box-sizing:border-box;
- box-sizing:border-box;
- border-radius:6px;
- -webkit-box-shadow:
- 0 2px 4px 0 rgba(72, 72, 72, 0.83),
- 0 10px 15px 0 rgba(126, 126, 126, 0.12),
- 0 -2px 6px 1px rgba(199, 199, 199, 0.55) inset, 
- 0 2px 4px 2px rgba(255, 255, 255, 0.83) inset;
- -moz-box-shadow: 
- 0 2px 4px 0 rgba(72, 72, 72, 0.83),
- 0 10px 15px 0 rgba(126, 126, 126, 0.12),
- 0 -2px 6px 1px rgba(199, 199, 199, 0.55) inset, 
- 0 2px 4px 2px rgba(255, 255, 255, 0.83) inset;
- box-shadow: 
- 0 2px 4px 0 rgba(72, 72, 72, 0.83),
- 0 10px 15px 0 rgba(126, 126, 126, 0.12),
- 0 -2px 6px 1px rgba(199, 199, 199, 0.55) inset, 
- 0 2px 4px 2px rgba(255, 255, 255, 0.83) inset;
+.searchbox {
+    text-align: center;
+    background-color: #fffbf8;
+    padding: 13px;
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 25px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 6px;
+    -webkit-box-shadow: 0 2px 4px 0 rgba(72, 72, 72, 0.83), 0 10px 15px 0 rgba(126, 126, 126, 0.12), 0 -2px 6px 1px rgba(199, 199, 199, 0.55) inset, 0 2px 4px 2px rgba(255, 255, 255, 0.83) inset;
+    -moz-box-shadow: 0 2px 4px 0 rgba(72, 72, 72, 0.83), 0 10px 15px 0 rgba(126, 126, 126, 0.12), 0 -2px 6px 1px rgba(199, 199, 199, 0.55) inset, 0 2px 4px 2px rgba(255, 255, 255, 0.83) inset;
+    box-shadow: 0 2px 4px 0 rgba(72, 72, 72, 0.83), 0 10px 15px 0 rgba(126, 126, 126, 0.12), 0 -2px 6px 1px rgba(199, 199, 199, 0.55) inset, 0 2px 4px 2px rgba(255, 255, 255, 0.83) inset;
 }
-#food{
- width:250px;
- height:30px;
- padding-left:5px;
- border-radius:6px;
- border:none;
- color:#939393;
- font-weight:500;
- background-color:#fffbf8;
- -webkit-box-shadow:
- 0 -2px 2px 0 rgba(199, 199, 199, 0.55),
- 0 1px 1px 0 #fff,
- 0 2px 2px 1px #fafafa,
- 0 2px 4px 0 #b2b2b2 inset,
- 0 -1px 1px 0 #f2f2f2 inset,
- 0 15px 15px 0 rgba(41, 41, 41, 0.09) inset;
- -moz-box-shadow: 
- 0 -2px 2px 0 rgba(199, 199, 199, 0.55),
- 0 1px 1px 0 #fff,
- 0 2px 2px 1px #fafafa,
- 0 2px 4px 0 #b2b2b2 inset,
- 0 -1px 1px 0 #f2f2f2 inset,
- 0 15px 15px 0 rgba(41, 41, 41, 0.09) inset;
- box-shadow:
- 0 -2px 2px 0 rgba(199, 199, 199, 0.55),
- 0 1px 1px 0 #fff,
- 0 2px 2px 1px #fafafa,
- 0 2px 4px 0 #b2b2b2 inset,
- 0 -1px 1px 0 #f2f2f2 inset,
- 0 15px 15px 0 rgba(41, 41, 41, 0.09) inset;
+#food {
+    width: 250px;
+    height: 30px;
+    padding-left: 5px;
+    border-radius: 6px;
+    border: none;
+    color: #939393;
+    font-weight: 500;
+    background-color: #fffbf8;
+    -webkit-box-shadow: 0 -2px 2px 0 rgba(199, 199, 199, 0.55), 0 1px 1px 0 #fff, 0 2px 2px 1px #fafafa, 0 2px 4px 0 #b2b2b2 inset, 0 -1px 1px 0 #f2f2f2 inset, 0 15px 15px 0 rgba(41, 41, 41, 0.09) inset;
+    -moz-box-shadow: 0 -2px 2px 0 rgba(199, 199, 199, 0.55), 0 1px 1px 0 #fff, 0 2px 2px 1px #fafafa, 0 2px 4px 0 #b2b2b2 inset, 0 -1px 1px 0 #f2f2f2 inset, 0 15px 15px 0 rgba(41, 41, 41, 0.09) inset;
+    box-shadow: 0 -2px 2px 0 rgba(199, 199, 199, 0.55), 0 1px 1px 0 #fff, 0 2px 2px 1px #fafafa, 0 2px 4px 0 #b2b2b2 inset, 0 -1px 1px 0 #f2f2f2 inset, 0 15px 15px 0 rgba(41, 41, 41, 0.09) inset;
 }
-#search{
- width:35px;
- height:30px;
- background-image:url(img/search-btn.png);
- background-repeat: no-repeat;
- background-position: 10px 5px;
- background-color:transparent;
- -webkit-background-size:20px 20px;
- background-size:20px 20px;
- border:none;
- cursor:pointer;
+#search {
+    width: 35px;
+    height: 30px;
+    background-image: url(img/search-btn.png);
+    background-repeat: no-repeat;
+    background-position: 10px 5px;
+    background-color: transparent;
+    -webkit-background-size: 20px 20px;
+    background-size: 20px 20px;
+    border: none;
+    cursor: pointer;
 }
-#food:focus{
- outline:0;
+#food:focus {
+    outline: 0;
 }
