--- a/css/tableStyle.css
+++ b/css/tableStyle.css
@@ -1,54 +1,51 @@
 .table {
-  margin-top: 5px;
-  width: 100%;  
-  display: table;
-  text-align: center;
+    margin: 0 auto;
+    margin-top: 5px;
+    display: table;
+    text-align: center;
 }
 @media screen and (max-width: 580px) {
-  .table {
-    display: block;
-  }
+    .table {
+        display: block;
+    }
 }
-
 .rowt {
-  display: table-row;
-  background: #f6f6f6;
+    display: table-row;
+    background: #f6f6f6;
 }
 .rowt:nth-of-type(odd) {
-  background: #e9e9e9;
+    background: #e9e9e9;
 }
 .rowt.header-grey {
-  font-weight: 900;
-  color: #ffffff;
-  background: #c1c1a4;
+    font-weight: 900;
+    color: #ffffff;
+    background: #c1c1a4;
 }
 .rowt.header-green {
-  font-weight: 900;
-  color: #ffffff;
-  background: #27ae60;
+    font-weight: 900;
+    color: #ffffff;
+    background: #27ae60;
 }
 .rowt.header-summary {
-  font-weight: 900;
-  color: #ffffff;
-  background: #7a7a52;
+    font-weight: 900;
+    color: #ffffff;
+    background: #002b80;
+    border-width: 2px;
+    border-color: #ffffff;
 }
-
 @media screen and (max-width: 580px) {
-  .rowt {
-    padding: 8px 0;
-    display: block;
-  }
+    .rowt {
+        padding: 8px 0;
+        display: block;
+    }
 }
-
 .cell {
-  padding: 6px 12px;
-  display: table-cell;
+    padding: 6px 12px;
+    display: table-cell;
 }
 @media screen and (max-width: 580px) {
-  .cell {
-    padding: 2px 12px;
-    display: block;
-  }
+    .cell {
+        padding: 2px 12px;
+        display: block;
+    }
 }
-
-
